test/tests/BadAnnotations.panda
@foo
@class
@private
@protected
@class
@override
class Test {
}
